--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,16 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 header {
+  padding: 20px 35px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
 header nav ul {
   display: flex;
   flex-wrap: wrap;
@@ -19,19 +27,84 @@ header nav ul li a {
   margin: 0;
 }
 
-#About-Me {
-  display: flex;
-  flex-wrap: wrap;
-}
 h2 {
+  padding-left: 55px;
+  margin: 0 20px;
+
+  border-right: 3px solid peru;
+  width: 100%;
+  height: 100%;
+  text-align: right;
 }
+
 .me {
   display: flex;
+  padding: 0px 10px;
+  margin: 0 10px;
+  background-color: plum;
+  justify-content: stretch;
+}
+
+.me p {
+  font-size: 28px;
+  color: rgb(255, 255, 255);
+  background-color: plum;
+  padding: 0 10px;
   flex-wrap: wrap;
-  text-align: center;
+  margin: 25px 30px 25px 30px;
+  justify-content: space-evenly;
+}
+
+.profile img {
+  margin: 0 20px;
+}
+
+.flex-row {
+  flex-wrap: wrap;
+  align-items: flex-start;
+
+  margin: 25px 30px 25px 30px;
+}
+
+.my-works {
+  display: flex;
+  justify-content: space-around;
+}
+
+.works-one {
+  flex: 1 1 100%;
+  flex-wrap: wrap;
+  margin: 20px 10px;
+}
+
+.works-one img {
+  margin: 0 100px;
+  width: 100%;
+  max-width: 937px;
+  max-height: 100%;
   align-items: center;
 }
-.me p {
+
+.works {
   display: flex;
-  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  align-items: center;
 }
+
+.wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  padding: 20px;
+  margin: 0 auto;
+  flex: 1;
+}
+
+.works img {
+  width: 100%;
+  max-width: 400px;
+  max-height: 100%;
+  margin: 10px 80px;
+}
+
+/* 128119	1F477 */
