--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,11 @@ body {
   background-position: center;
 }
 
+section {
+  padding: 0;
+  margin: 0;
+}
+
 header {
   padding: 20px 35px;
   display: flex;
@@ -108,15 +113,17 @@ h2 {
 }
 
 .col-content {
-  flex: 0 0 75%;
+  flex: 0 0 80%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+  align-content: center;
+  padding: 1em;
 }
 
 .col-item {
-  flex: 0 0 50%;
-  padding: 2em;
+  flex: 0 0 40%;
+  margin: 1em;
 }
 
 .col-item-full {
@@ -245,6 +252,7 @@ a:hover {
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    max-width: 100%;
   }
   .back-ground-img {
     background-image: none;
@@ -287,11 +295,7 @@ a:hover {
   .two-columns {
     max-width: 100%;
     flex-direction: column;
-    margin: 1em;
-  }
-
-  .col-item {
-    flex: 100%;
+    justify-content: center;
   }
 
   .col-title {
@@ -300,9 +304,11 @@ a:hover {
     text-align: center;
     border-bottom: 6px solid beige;
   }
-
   .contact-flex {
     flex-direction: column;
+  }
+  .col-content {
+    justify-content: space-around;
   }
 
   .contact-title {
@@ -315,7 +321,9 @@ a:hover {
   .contact-content ul {
     display: flex;
     font-size: 20px;
-    justify-content: space-around;
+    padding: 0;
+    align-items: stretch;
+    margin: 0 auto 0 auto;
   }
 
   @media screen and (max-width: 768px) {
@@ -323,15 +331,19 @@ a:hover {
       font-size: 20px;
     }
 
+    section {
+      padding: 0;
+      margin: 0;
+    }
+
     .contact-content ul {
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
     }
 
     .contact-content ul a {
       font-size: 15px;
       visibility: hidden;
-      flex: 1;
       align-items: center;
     }
 
@@ -349,5 +361,30 @@ a:hover {
       visibility: visible;
       content: "GIT";
     }
+  
+}
+@media screen and (max-width: 580px) {
+  header {
+    max-width: 100%;
   }
+}
+.flex-row {
+  padding: 0;
+}
+
+.col-item {
+  flex: 0 0 75%;
+}
+
+.col-item > a {
+  padding: 2em;
+  height: 200px;
+}
+
+.col-title {
+  justify-content: center;
+}
+
+.col-content span {
+  background-color: beige;
 }
